38-undo-redo-bug => BUMPED dependency versions