@@ -13,11 +13,11 @@
     <maven.compiler.target>20</maven.compiler.target>
     <test-plugins.version>3.1.2</test-plugins.version>
     <javafx.version>20</javafx.version>
-    <itext.version>8.0.0</itext.version>
-    <testfx.version>4.0.16-alpha</testfx.version>
-    <junit.version>5.10.0-M1</junit.version>
-    <logback.version>1.4.8</logback.version>
-    <dependency-check-maven.version>8.3.1</dependency-check-maven.version>
+    <itext.version>8.0.2</itext.version>
+    <testfx.version>4.0.17</testfx.version>
+    <junit.version>5.10.1</junit.version>
+    <logback.version>1.4.11</logback.version>
+    <dependency-check-maven.version>8.4.0</dependency-check-maven.version>
   </properties>
 
   <dependencies>
@@ -69,12 +69,12 @@
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
-      <version>4.0.0</version>
+      <version>4.0.1</version>
     </dependency>
     <dependency>
       <groupId>com.sun.xml.bind</groupId>
       <artifactId>jaxb-impl</artifactId>
-      <version>4.0.3</version>
+      <version>4.0.4</version>
     </dependency>
 
     <dependency>
@@ -96,13 +96,13 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>2.0.7</version>
+      <version>2.0.9</version>
     </dependency>
 
     <dependency>
       <groupId>com.github.spotbugs</groupId>
       <artifactId>spotbugs-annotations</artifactId>
-      <version>4.7.3</version>
+      <version>4.8.1</version>
       <scope>compile</scope>
     </dependency>
 
@@ -140,7 +140,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>5.4.0</version>
+      <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -223,7 +223,7 @@
           <excludes>
             <exclude>**/unittest/**</exclude>
           </excludes>
-          <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
+          <argLine>@{argLine} --add-opens javafx.graphics/com.sun.javafx.application=testfx.core</argLine>
           <skipITs>${skipFTs}</skipITs>
         </configuration>
       </plugin>
@@ -308,7 +308,7 @@
           <plugin>
             <groupId>io.github.fvarrui</groupId>
             <artifactId>javapackager</artifactId>
-            <version>1.7.2</version>
+            <version>1.7.5</version>
             <executions>
               <execution>
                 <phase>package</phase>
